--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
                             <artifactSet>
                                 <excludes>
                                     <exclude>com.google.code.findbugs:jsr305</exclude>
+                                    <exclude>org.apache.flink:*</exclude>
                                 </excludes>
                             </artifactSet>
                             <filters>
